// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StructuredListItem with href renders four cells with href 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-3:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-3:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:disabled {
  background-color: transparent;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="http://apple.com"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        />
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem with href renders one cell pullRight with href 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-3:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-3:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:disabled {
  background-color: transparent;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-4 {
    padding: 0 8px;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    padding: 0 12px;
  }
}

.emotion-5 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-5 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-6 svg {
  fill: #0a0a0a;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-7 {
    padding: 0 8px;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-7 {
    padding: 0 12px;
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-10 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #0a0a0a;
  fill: #0a0a0a;
  vertical-align: unset;
  display: inline-block;
}

.emotion-10.emotion-10 {
  width: 16px;
  height: 16px;
  color: #0a0a0a;
  fill: #0a0a0a;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="http://apple.com"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <p
                class="emotion-6"
              >
                Label
              </p>
            </div>
          </div>
          <div
            class="emotion-7"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-9"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-10 emotion-11"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem with href renders one cell with external link icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-3:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-3:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:disabled {
  background-color: transparent;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-4 {
    padding: 0 8px;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    padding: 0 12px;
  }
}

.emotion-5 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-5 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-6 svg {
  fill: #0a0a0a;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-7 {
    padding: 0 8px;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-7 {
    padding: 0 12px;
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-10 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #0a0a0a;
  fill: #0a0a0a;
  vertical-align: unset;
  display: inline-block;
}

.emotion-10.emotion-10 {
  width: 16px;
  height: 16px;
  color: #0a0a0a;
  fill: #0a0a0a;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="http://apple.com"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <p
                class="emotion-6"
              >
                Label
              </p>
            </div>
          </div>
          <div
            class="emotion-7"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-9"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-10 emotion-11"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem with href renders one cell with internal link icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-3:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-3:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:disabled {
  background-color: transparent;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-4 {
    padding: 0 8px;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    padding: 0 12px;
  }
}

.emotion-5 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-5 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-6 svg {
  fill: #0a0a0a;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-7 {
    padding: 0 8px;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-7 {
    padding: 0 12px;
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-10 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #0a0a0a;
  fill: #0a0a0a;
  vertical-align: unset;
  display: inline-block;
}

.emotion-10.emotion-10 {
  width: 16px;
  height: 16px;
  color: #0a0a0a;
  fill: #0a0a0a;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="/"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <p
                class="emotion-6"
              >
                Label
              </p>
            </div>
          </div>
          <div
            class="emotion-7"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-9"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-10 emotion-11"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 24H0V0h24v24z"
                    fill="none"
                    opacity="0.87"
                  />
                  <path
                    d="M6.49 20.13l1.77 1.77 9.9-9.9-9.9-9.9-1.77 1.77L14.62 12l-8.13 8.13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem with href renders three cells with custom icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-3:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-3:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:disabled {
  background-color: transparent;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-4 {
    padding: 0 8px;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    padding: 0 12px;
  }
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-7 {
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-7 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
  }
}

.emotion-8 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-8 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-9 svg {
  fill: #0a0a0a;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-10 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-10 {
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-10 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

.emotion-12 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-12 svg {
  fill: #535353;
}

.emotion-12::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-12::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-13 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-13 {
    padding: 0 8px;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-13 {
    padding: 0 12px;
  }
}

.emotion-15 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-15.emotion-15 {
  width: 24px;
  height: 24px;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="http://apple.com"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-2"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-8"
                  >
                    <p
                      class="emotion-9"
                    >
                      Label
                    </p>
                  </div>
                </div>
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-8"
                  >
                    <p
                      class="emotion-12"
                    >
                      A short description of the label
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-13"
          >
            <div
              class="emotion-8"
            >
              <svg
                aria-hidden="true"
                class="emotion-15 emotion-16"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem with href renders two cells with external link icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-3:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-3:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:disabled {
  background-color: transparent;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-4 {
    padding: 0 8px;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    padding: 0 12px;
  }
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-7 {
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-7 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
  }
}

.emotion-8 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-8 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-9 svg {
  fill: #0a0a0a;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-10 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-10 {
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-10 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

.emotion-12 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-12 svg {
  fill: #535353;
}

.emotion-12::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-12::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-13 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-13 {
    padding: 0 8px;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-13 {
    padding: 0 12px;
  }
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-16 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #0a0a0a;
  fill: #0a0a0a;
  vertical-align: unset;
  display: inline-block;
}

.emotion-16.emotion-16 {
  width: 16px;
  height: 16px;
  color: #0a0a0a;
  fill: #0a0a0a;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="http://apple.com"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-2"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-8"
                  >
                    <p
                      class="emotion-9"
                    >
                      Label
                    </p>
                  </div>
                </div>
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-8"
                  >
                    <p
                      class="emotion-12"
                    >
                      A short description of the label
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-13"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-15"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-16 emotion-17"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem with href renders two cells with internal link icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-3:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-3:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:disabled {
  background-color: transparent;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-4 {
    padding: 0 8px;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    padding: 0 12px;
  }
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-6 {
    margin: -16px 0px 0 0px;
  }
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-7 {
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-7 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
  }
}

.emotion-8 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-8 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-9 svg {
  fill: #0a0a0a;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-10 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-10 {
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-10 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

.emotion-12 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-12 svg {
  fill: #535353;
}

.emotion-12::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-12::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-13 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-13 {
    padding: 0 8px;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-13 {
    padding: 0 12px;
  }
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-16 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #0a0a0a;
  fill: #0a0a0a;
  vertical-align: unset;
  display: inline-block;
}

.emotion-16.emotion-16 {
  width: 16px;
  height: 16px;
  color: #0a0a0a;
  fill: #0a0a0a;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="/"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-2"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-8"
                  >
                    <p
                      class="emotion-9"
                    >
                      Label
                    </p>
                  </div>
                </div>
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-8"
                  >
                    <p
                      class="emotion-12"
                    >
                      A short description of the label
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-13"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-15"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-16 emotion-17"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 24H0V0h24v24z"
                    fill="none"
                    opacity="0.87"
                  />
                  <path
                    d="M6.49 20.13l1.77 1.77 9.9-9.9-9.9-9.9-1.77 1.77L14.62 12l-8.13 8.13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem with href renders two cells with pullRightOnFirst and href 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-3:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-3:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:disabled {
  background-color: transparent;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="http://apple.com"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        />
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem with href renders two cells with pullRightOnSecond and href 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-3:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-3:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:disabled {
  background-color: transparent;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-4 {
    padding: 0 8px;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    padding: 0 12px;
  }
}

.emotion-5 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-5 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-6 svg {
  fill: #0a0a0a;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-7 {
    padding: 0 8px;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-7 {
    padding: 0 12px;
  }
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-9 svg {
  fill: #535353;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="http://apple.com"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <p
                class="emotion-6"
              >
                Label
              </p>
            </div>
          </div>
          <div
            class="emotion-7"
          >
            <div
              class="emotion-5"
            >
              <p
                class="emotion-9"
              >
                A short description of the label
              </p>
            </div>
          </div>
        </div>
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem with href renders with disabled link 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: not-allowed;
  list-style: none;
  width: 100%;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-3:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-3:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:disabled {
  background-color: transparent;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-4 {
    padding: 0 8px;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    padding: 0 12px;
  }
}

.emotion-5 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-5 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-6 svg {
  fill: #0a0a0a;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-7 {
    padding: 0 8px;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-7 {
    padding: 0 12px;
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-10 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #0a0a0a;
  fill: #0a0a0a;
  vertical-align: unset;
  display: inline-block;
}

.emotion-10.emotion-10 {
  width: 16px;
  height: 16px;
  color: #0a0a0a;
  fill: #0a0a0a;
}

<li
    aria-label="Structured list"
    class="emotion-0"
    disabled=""
  >
    <span
      aria-disabled="true"
      class="emotion-1"
      href="/"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <p
                class="emotion-6"
              >
                Label
              </p>
            </div>
          </div>
          <div
            class="emotion-7"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-9"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-10 emotion-11"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 24H0V0h24v24z"
                    fill="none"
                    opacity="0.87"
                  />
                  <path
                    d="M6.49 20.13l1.77 1.77 9.9-9.9-9.9-9.9-1.77 1.77L14.62 12l-8.13 8.13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem without-href renders with default style 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-2:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:disabled {
  background-color: transparent;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
  }
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-5 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-5 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-5 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-5 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-5 {
    margin: -16px 0px 0 0px;
  }
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-6 {
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-6 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
  }
}

.emotion-7 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-7 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-8 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-8 svg {
  fill: #0a0a0a;
}

.emotion-8::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-8::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-9 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-9 {
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-9 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

.emotion-11 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-11 svg {
  fill: #535353;
}

.emotion-11::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-11::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-12 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-12 {
    padding: 0 8px;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-12 {
    padding: 0 12px;
  }
}

.emotion-14 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-14.emotion-14 {
  width: 24px;
  height: 24px;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-1"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <p
                    class="emotion-8"
                  >
                    Label
                  </p>
                </div>
              </div>
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-7"
                >
                  <p
                    class="emotion-11"
                  >
                    A short description of the label
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-12"
        >
          <div
            class="emotion-7"
          >
            <svg
              aria-hidden="true"
              class="emotion-14 emotion-15"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem without-href renders with more than 3 children 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`StructuredListItem without-href renders with one cell default 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-2:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:disabled {
  background-color: transparent;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
  }
}

.emotion-4 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-5 svg {
  fill: #0a0a0a;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <p
              class="emotion-5"
            >
              Label
            </p>
          </div>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem without-href renders with one cell with pullRight 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-2:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:disabled {
  background-color: transparent;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin-left: 83.33333333333334%;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
  }
}

.emotion-4 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-5 svg {
  fill: #0a0a0a;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <p
              class="emotion-5"
            >
              Label
            </p>
          </div>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem without-href renders with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 32px;
  min-height: 64px;
}

@media screen {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
  }
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-5 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-5 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-5 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-5 {
    margin: -16px 0px 0 0px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-5 {
    margin: -16px 0px 0 0px;
  }
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-6 {
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-6 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
  }
}

.emotion-7 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-7 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-8 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-8 svg {
  fill: #0a0a0a;
}

.emotion-8::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-8::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-9 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-9 {
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-9 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

.emotion-11 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-11 svg {
  fill: #535353;
}

.emotion-11::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-11::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-12 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-12 {
    padding: 0 8px;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-12 {
    padding: 0 12px;
  }
}

.emotion-14 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-14.emotion-14 {
  width: 24px;
  height: 24px;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-1"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <p
                    class="emotion-8"
                  >
                    Label
                  </p>
                </div>
              </div>
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-7"
                >
                  <p
                    class="emotion-11"
                  >
                    A short description of the label
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-12"
        >
          <div
            class="emotion-7"
          >
            <svg
              aria-hidden="true"
              class="emotion-14 emotion-15"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem without-href renders with texts only and no cells 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-2:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:disabled {
  background-color: transparent;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
  }
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          No Cells
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem without-href renders with two cells default style 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-2 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-2:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:disabled {
  background-color: transparent;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin-top: 0;
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
  }
}

.emotion-4 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-5 svg {
  fill: #0a0a0a;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-6 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-6 {
    margin-top: 0;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-6 {
    padding: 0 12px;
  }
}

.emotion-8 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-8 svg {
  fill: #535353;
}

.emotion-8::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-8::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <p
              class="emotion-5"
            >
              Label
            </p>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <p
              class="emotion-8"
            >
              A short description of the label
            </p>
          </div>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem without-href renders with two cells with pullRight on the first 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-2 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-2:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:disabled {
  background-color: transparent;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin-top: 0;
    margin-left: 33.333333333333336%;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
  }
}

.emotion-4 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-5 svg {
  fill: #0a0a0a;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-6 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-6 {
    margin-top: 0;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-6 {
    padding: 0 12px;
  }
}

.emotion-8 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-8 svg {
  fill: #535353;
}

.emotion-8::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-8::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <p
              class="emotion-5"
            >
              Label
            </p>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <p
              class="emotion-8"
            >
              A short description of the label
            </p>
          </div>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`StructuredListItem without-href renders with two cells with pullRight on the second 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  width: 100%;
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-style: solid;
  border-color: #f0f0f0;
  border-width: 0 0 1px 0;
  padding: 24px 16px;
  min-height: 80px;
}

@media screen {
  .emotion-2 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -0px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -0px -12px 0 -12px;
  }
}

.emotion-2:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:disabled {
  background-color: transparent;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin-top: 0;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
  }
}

.emotion-4 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-5 svg {
  fill: #0a0a0a;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.23750000000000002em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-6 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-6 {
    margin-top: 0;
    margin-left: 33.333333333333336%;
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-6 {
    padding: 0 12px;
  }
}

.emotion-8 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-8 svg {
  fill: #535353;
}

.emotion-8::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-8::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<li
    aria-label="Structured list"
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <p
              class="emotion-5"
            >
              Label
            </p>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <p
              class="emotion-8"
            >
              A short description of the label
            </p>
          </div>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;
